task2: modify assets

--- a/client/index.html
+++ b/client/index.html
@@ -394,8 +394,8 @@
                         <tr>
                             <td class="asset-name">股票B</td>
                             <td>8000</td>
-                            <td class="positive-change">+2.7%</td>
-                            <td><div class="rank">2</div></td>
+                            <td class="profit">+2.7%</td>
+                            <td class="return-percent">2</td>
                         </tr>
                         <tr>
                             <td class="asset-name">债券C</td>
