--- a/SelfSelected.html
+++ b/SelfSelected.html
@@ -256,209 +256,123 @@
                     <th width="15%">年初至今</th>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <td>
-                        <div class="stock-info">
-                            <div class="stock-name">腾讯控股</div>
-                            <div class="stock-code">HK00700</div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="stock-price">549.0</div>
-                    </td>
-                    <td>
-                        <div class="stock-change down">
-                            <div class="change-value">-8.0</div>
-                            <div class="change-percent">(-1.44%)</div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="volume">752.25万股</div>
-                    </td>
-                    <td>
-                        <div class="market-cap">5.03万亿</div>
-                    </td>
-                    <td>
-                        <div class="ytd-change up">+32.80%</div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="stock-info">
-                            <div class="stock-name">长江电力</div>
-                            <div class="stock-code">SH600900</div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="stock-price">28.92</div>
-                    </td>
-                    <td>
-                        <div class="stock-change down">
-                            <div class="change-value">-0.02</div>
-                            <div class="change-percent">(-0.07%)</div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="volume">42.44万手</div>
-                    </td>
-                    <td>
-                        <div class="market-cap">7076.21亿</div>
-                    </td>
-                    <td>
-                        <div class="ytd-change up">+1.05%</div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="stock-info">
-                            <div class="stock-name">洋河股份</div>
-                            <div class="stock-code">SZ002304</div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="stock-price">68.47</div>
-                    </td>
-                    <td>
-                        <div class="stock-change down">
-                            <div class="change-value">-0.42</div>
-                            <div class="change-percent">(-0.61%)</div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="volume">24896手</div>
-                    </td>
-                    <td>
-                        <div class="market-cap">1031.46亿</div>
-                    </td>
-                    <td>
-                        <div class="ytd-change down">-12.57%</div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="stock-info">
-                            <div class="stock-name">赣锋锂业</div>
-                            <div class="stock-code">SZ002460</div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="stock-price">39.61</div>
-                    </td>
-                    <td>
-                        <div class="stock-change up">
-                            <div class="change-value">+0.21</div>
-                            <div class="change-percent">(+0.53%)</div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="volume">53.31万手</div>
-                    </td>
-                    <td>
-                        <div class="market-cap">799.00亿</div>
-                    </td>
-                    <td>
-                        <div class="ytd-change up">+13.64%</div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="stock-info">
-                            <div class="stock-name">比亚迪</div>
-                            <div class="stock-code">SZ002594</div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="stock-price">337.14</div>
-                    </td>
-                    <td>
-                        <div class="stock-change down">
-                            <div class="change-value">-5.58</div>
-                            <div class="change-percent">(-1.63%)</div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="volume">90485手</div>
-                    </td>
-                    <td>
-                        <div class="market-cap">1.85万亿</div>
-                    </td>
-                    <td>
-                        <div class="ytd-change up">+19.27%</div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="stock-info">
-                            <div class="stock-name">迈瑞医疗</div>
-                            <div class="stock-code">SZ300760</div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="stock-price">231.90</div>
-                    </td>
-                    <td>
-                        <div class="stock-change down">
-                            <div class="change-value">-0.17</div>
-                            <div class="change-percent">(-0.07%)</div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="volume">43308手</div>
-                    </td>
-                    <td>
-                        <div class="market-cap">2811.65亿</div>
-                    </td>
-                    <td>
-                        <div class="ytd-change down">-8.27%</div>
-                    </td>
-                </tr>
+            <tbody id="stock-data">
+                <!-- 数据将通过JavaScript动态填充 -->
             </tbody>
         </table>
     </div>
 
     <script>
-    // 简单交互逻辑
-    document.querySelectorAll('.tab').forEach(tab => {
-        tab.addEventListener('click', function() {
-            document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
-            this.classList.add('active');
+        // 简单交互逻辑
+        document.querySelectorAll('.tab').forEach(tab => {
+            tab.addEventListener('click', function() {
+                document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
+                this.classList.add('active');
+            });
         });
-    });
 
-    document.querySelectorAll('.filter-btn').forEach(btn => {
-        btn.addEventListener('click', function() {
-            document.querySelectorAll('.filter-btn').forEach(b => b.classList.remove('active'));
-            this.classList.add('active');
+        document.querySelectorAll('.filter-btn').forEach(btn => {
+            btn.addEventListener('click', function() {
+                document.querySelectorAll('.filter-btn').forEach(b => b.classList.remove('active'));
+                this.classList.add('active');
+            });
         });
-    });
 
-    // fetch必须放在async函数里
-    async function getHoldings() {
-        try {
-            const response = await fetch('http://localhost:3001/api/portfolio/my-holdings');
-            if (!response.ok) {
-                throw new Error(`HTTP错误! 状态码: ${response.status}`);
-            }
-            const apiResponse = await response.json();
-            console.log("API返回数据:", apiResponse);
-            if (!apiResponse.data) {
-                throw new Error("API返回数据中缺少data字段");
-            }
-            console.log('资产数据更新成功');
-        } catch (error) {
-            console.error('获取资产数据失败:', error);
-            const errorElement = document.getElementById('api-error');
-            if (errorElement) {
-                errorElement.textContent = `数据更新失败: ${error.message}`;
-                errorElement.style.display = 'block';
-                setTimeout(() => {
-                    errorElement.style.display = 'none';
-                }, 3000);
+        async function getHoldings() {
+            try {
+                const response = await fetch('http://localhost:3001/api/stocks/market', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify([
+                        { ticker: "AAPL", type: "Common Stock" },
+                        { ticker: "SPY", type: "etf" },
+                        { ticker: "VFIAX", type: "Managed Fund" }
+                    ])
+                });
+                const data = await response.json();
+                console.log('获取的数据:', data);
+                if(data.code === 200) {
+                    renderStocks(data.data);
+                } else {
+                    console.error('API返回错误:', data.message);
+                }
+            } catch (error) {
+                console.error('POST请求失败:', error);
             }
         }
-    }
-    getHoldings();
-</script>
+
+        function formatVolume(volume) {
+            // 根据成交量大小转换合适的单位
+            if (volume >= 100000000) {
+                return (volume / 100000000).toFixed(2) + '亿股';
+            } else if (volume >= 10000) {
+                return (volume / 10000).toFixed(2) + '万股';
+            } else {
+                return volume + '股';
+            }
+        }
+
+        function getStockTypeName(type) {
+            // 将股票类型英文转换为中文名称
+            const typeMap = {
+                'Common Stock': '普通股',
+                'ETF': '交易所交易基金',
+                'Managed Fund': '管理基金'
+            };
+            return typeMap[type] || type;
+        }
+
+        function getChineseName(symbol) {
+            // 根据股票代码获取中文名称（示例）
+            const nameMap = {
+                'AAPL': '苹果公司',
+                'SPY': '标普500指数ETF',
+                'VFIAX': '先锋标普500指数基金'
+            };
+            return nameMap[symbol] || symbol;
+        }
+
+        function renderStocks(stocks) {
+            const tbody = document.getElementById('stock-data');
+            tbody.innerHTML = ''; // 清空现有内容
+            
+            stocks.forEach(stock => {
+                const changeClass = stock.deltaIndicator === 'up' ? 'up' : 'down';
+                const sign = stock.deltaIndicator === 'up' ? '+' : '';
+                
+                const row = document.createElement('tr');
+                row.innerHTML = `
+                    <td>
+                        <div class="stock-info">
+                            <div class="stock-name">${getChineseName(stock.symbol)}</div>
+                            <div class="stock-code">${stock.symbol}</div>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="stock-price">${stock.lastSalePrice}</div>
+                    </td>
+                    <td>
+                        <div class="stock-change ${changeClass}">
+                            <div class="change-value">${sign}${stock.netChange}</div>
+                            <div class="change-percent">${sign}${stock.percentageChange}%</div>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="volume">${formatVolume(stock.volume)}</div>
+                    </td>
+                    <td>
+                        <div class="market-cap">${getStockTypeName(stock.stockType)}</div>
+                    </td>
+                    <td>
+                        <div class="ytd-change ${changeClass}">${sign}${stock.percentageChange}%</div>
+                    </td>
+                `;
+                tbody.appendChild(row);
+            });
+        }
+
+        // 页面加载后获取数据
+        document.addEventListener('DOMContentLoaded', getHoldings);
+    </script>
 </body>
 </html>
