fix: update some translations

--- a/client/index.html
+++ b/client/index.html
@@ -129,7 +129,7 @@
                 <div class="charts-container">
                     <!-- 资产分布图 -->
                     <div class="chart-container">
-                        <div class="chart-title">资产分布</div>
+                        <div class="chart-title">Assets Distribution</div>
                         <div class="chart-wrapper">
                             <canvas id="assetChart" width="200" height="150"></canvas>
                         </div>
@@ -137,23 +137,23 @@
                         <div class="legend">
                             <div class="legend-item">
                                 <div class="legend-color" style="background-color: #2a5dff;"></div>
-                                <span>股票 38%</span>
+                                <span>Stock 38%</span>
                             </div>
-                            <div class="legend-item">
+                            <!-- <div class="legend-item">
                                 <div class="legend-color" style="background-color: #0dbd70;"></div>
                                 <span>债券 25%</span>
-                            </div>
+                            </div> -->
                             <div class="legend-item">
                                 <div class="legend-color" style="background-color: #ff6b6b;"></div>
-                                <span>基金 18%</span>
-                            </div>
-                            <div class="legend-item">
-                                <div class="legend-color" style="background-color: #ffd166;"></div>
-                                <span>另类 12%</span>
+                                <span>Funds 18%</span>
                             </div>
                             <div class="legend-item">
                                 <div class="legend-color" style="background-color: #a29bfe;"></div>
-                                <span>现金 7%</span>
+                                <span>Cash 7%</span>
+                            </div>
+                            <div class="legend-item">
+                                <div class="legend-color" style="background-color: #ffd166;"></div>
+                                <span>Others 12%</span>
                             </div>
                         </div>
                     </div>
