self stock size

--- a/client/info_selectstock.html
+++ b/client/info_selectstock.html
@@ -465,7 +465,7 @@
                     <th width="15%">Price</th>
                     <th width="15%">Change</th>
                     <th width="15%">Volume</th>
-                    <th width="15%">Market Cap</th>
+                    <th width="15%">StockType</th>
                     <th width="15%">Actions</th>
                 </tr>
             </thead>
